Overflow fix on background

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,5 +1,9 @@
 body {}
 
+div#coolstuff {
+    overflow: hidden;
+}
+
 #header {
     width: 80%;
     _display: flex;
